syntax = "proto3";
package misesid.misestm.v1beta1;

import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";
import "cosmos/bank/v1beta1/bank.proto";

// this line is used by starport scaffolding # proto/tx/import
import "misestm/v1beta1/UserInfo.proto";
import "misestm/v1beta1/UserRelation.proto";
import "misestm/v1beta1/AppInfo.proto";
import "misestm/v1beta1/DidRegistry.proto";


option go_package = "github.com/mises-id/mises-tm/x/misestm/types";

// Msg defines the Msg service.
service Msg {

	// NewDenom defines a method for create a new denom.
	rpc NewDenom(MsgNewDenom) returns (MsgNewDenomResponse);
	rpc NewNFTClass(MsgNewNFTClass) returns (MsgNewNFTClassResponse);
	rpc UpdateNFTClass(MsgUpdateNFTClass) returns (MsgUpdateNFTClassResponse);

	// MintNFT defines a method for mint a new nft
	rpc MintNFT(MsgMintNFT) returns (MsgMintNFTResponse);

	// UpdateNFT defines a method for editing a nft.
	rpc UpdateNFT(MsgUpdateNFT) returns (MsgUpdateNFTResponse);

	// BurnNFT defines a method for burning a nft.
	rpc BurnNFT(MsgBurnNFT) returns (MsgBurnNFTResponse);


  // this line is used by starport scaffolding # proto/tx/rpc
  rpc CreateUserInfo(MsgCreateUserInfo) returns (MsgCreateUserInfoResponse);
  rpc UpdateUserInfo(MsgUpdateUserInfo) returns (MsgUpdateUserInfoResponse);
  rpc DeleteUserInfo(MsgDeleteUserInfo) returns (MsgDeleteUserInfoResponse);
  rpc CreateUserRelation(MsgCreateUserRelation) returns (MsgCreateUserRelationResponse);
  rpc UpdateUserRelation(MsgUpdateUserRelation) returns (MsgUpdateUserRelationResponse);
  rpc DeleteUserRelation(MsgDeleteUserRelation) returns (MsgDeleteUserRelationResponse);
  rpc CreateAppInfo(MsgCreateAppInfo) returns (MsgCreateAppInfoResponse);
  rpc UpdateAppInfo(MsgUpdateAppInfo) returns (MsgUpdateAppInfoResponse);
  rpc DeleteAppInfo(MsgDeleteAppInfo) returns (MsgDeleteAppInfoResponse);
  rpc CreateDidRegistry(MsgCreateDidRegistry) returns (MsgCreateDidRegistryResponse);
  rpc UpdateDidRegistry(MsgUpdateDidRegistry) returns (MsgUpdateDidRegistryResponse);
  rpc DeleteDidRegistry(MsgDeleteDidRegistry) returns (MsgDeleteDidRegistryResponse);
}

// this line is used by starport scaffolding # proto/tx/message
message MsgCreateUserInfo {
  string creator = 1;
  string uid = 2;
  string encData = 3;
  string iv = 4;
  uint64 version = 5;
}

message MsgCreateUserInfoResponse {
  uint64 id = 1;
}

message MsgUpdateUserInfo {
  string creator = 1;
  uint64 id = 2;
  string uid = 3;
  string encData = 4;
  string iv = 5;
  uint64 version = 6;
}

message MsgUpdateUserInfoResponse { }

message MsgDeleteUserInfo {
  string creator = 1;
  uint64 id = 2;
}

message MsgDeleteUserInfoResponse { }

message MsgCreateUserRelation {
  string creator = 1;
  string uidFrom = 2;
  string uidTo = 3;
  bool isFollowing = 4; 
  bool isBlocking = 5; 
  bool isReferredBy = 6;
  uint64 version = 7;
}

message MsgCreateUserRelationResponse {
  uint64 id = 1;
}

message MsgUpdateUserRelation {
  string creator = 1;
  uint64 id = 2;
  string uidFrom = 3;
  string uidTo = 4;
  bool isFollowing = 5; 
  bool isBlocking = 6; 
  bool isReferredBy = 7;
  uint64 version = 8;
}

message MsgUpdateUserRelationResponse { }

message MsgDeleteUserRelation {
  string creator = 1;
  uint64 id = 2;
}

message MsgDeleteUserRelationResponse { }


message MsgCreateAppInfo {
  string creator = 1;
  string appid = 2;
  string name = 3;
  repeated string domains = 4;
  string developer = 5;
  string home_url = 6;
  string icon_url = 7;
  uint64 version = 8;
}

message MsgCreateAppInfoResponse {
  uint64 id = 1;
}

message MsgUpdateAppInfo {
  string creator = 1;
  uint64 id = 2;
  string appid = 3;
  string name = 4;
  repeated string domains = 5;
  string developer = 6;
  string home_url = 7;
  string icon_url = 8;
  uint64 version = 9;
}

message MsgUpdateAppInfoResponse { }

message MsgDeleteAppInfo {
  string creator = 1;
  uint64 id = 2;
}

message MsgDeleteAppInfoResponse { }

message MsgCreateDidRegistry {
  string creator = 1;
  string did = 2;
  string pkeyDid = 3;
  string pkeyType = 4;
  string pkeyMultibase = 5;
  uint64 version = 6;
}

message MsgCreateDidRegistryResponse {
  uint64 id = 1;
}

message MsgUpdateDidRegistry {
  string creator = 1;
  uint64 id = 2;
  string did = 3;
  string pkeyDid = 4;
  string pkeyType = 5;
  string pkeyMultibase = 6;
  uint64 version = 7;
}

message MsgUpdateDidRegistryResponse { }

message MsgDeleteDidRegistry {
  string creator = 1;
  uint64 id = 2;
}

message MsgDeleteDidRegistryResponse { }



// MsgNewDenom defines an SDK message for creating a new denom.
message MsgNewDenom {
  string id = 1;
  string amount = 2 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];
  cosmos.bank.v1beta1.Metadata denom_meta = 3;
  string sender = 4;
  string recipient = 5;
}

// MsgNewDenomResponse defines the MsgNewDenom response type.
message MsgNewDenomResponse {}



// MsgNewNFTClass defines an SDK message for creating a new NFTClass.
message MsgNewNFTClass {
  option (gogoproto.equal) = true;

  string id = 1;
  string name = 2;
  string uri = 3;
  string schema = 4;
  string symbol = 5;
  google.protobuf.Any data = 6;
  string sender = 7;
}

// MsgNewNFTClassResponse defines the MsgNewNFTClass response type.
message MsgNewNFTClassResponse {}



// MsgUpdateNFTClass defines an SDK message for editing a nft class.
message MsgUpdateNFTClass {
  option (gogoproto.equal) = true;

  string id = 1;
  string class_id = 2;
  string name = 3;
  string uri = 4;
  google.protobuf.Any data = 5;
  string sender = 6;
}

// MsgUpdateNFTClassResponse defines the MsgUpdateNFTClass response type.
message MsgUpdateNFTClassResponse {}


// MsgMintNFT defines an SDK message for creating a new NFT.
message MsgMintNFT {
  option (gogoproto.equal) = true;

  string id = 1;
  string class_id = 2;
  string name = 3;
  string uri = 4 ;
  google.protobuf.Any data = 5;
  string sender = 6;
  string recipient = 7;
}

// MsgMintNFTResponse defines the Msg/MintNFT response type.
message MsgMintNFTResponse {}


// MsgUpdateNFT defines an SDK message for update a NFT.
message MsgUpdateNFT {
  option (gogoproto.equal) = true;

  string id = 1;
  string class_id = 2;
  string uri = 3 ;
  google.protobuf.Any data = 4;
  string sender = 5;
}

// MsgUpdateNFTResponse defines the MsgUpdateNFT response type.
message MsgUpdateNFTResponse {}


// MsgBurnNFT defines an SDK message for burning a NFT.
message MsgBurnNFT {
  option (gogoproto.equal) = true;

  string id = 1;
  string class_id = 2;
  string sender = 3;
}

// MsgBurnNFTResponse defines the Msg/BurnNFT response type.
message MsgBurnNFTResponse {}

